--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is a paragraph </p>
+    <h1>
+        We use h1 for title 
+    </h1>
+    <p>
+        P for paragraph 
+    </p>
+    <p>img for image</p>
+    <p>ul perdoret per lista</p>
+    <ul> 
+        <li>list 1</li>
+        <li>list 2</li>
+        <li>list3</li>
+        <li>list4</li>
+        <li>list 5</li>
+        <li>list 6</li>
+    </ul>
+    <p>
+        per me kriju respository ngit dmth qe punimet e tua me mujt mi pa dikush tjeter mas pari duhet me shku te ai plusi
+        anen e djatht pjesen e siperme te ekranit me kliku qatu me prek new respository me ja lan ni emer respository me ba save edhe tani me ardh me clone qat respository 
+        me ru dikun ne lokacion ne kompujter e run ne nje new folder. tani shkon shkrun kod e run e prek ctrl+s pastaj te changes e prek plus qato ndyshime kalojne stage
+        e shkru ni msg qfare do  ska lidhje e prek commit edhe e bon push. And yeah thats it ♥♥♥♥
+    </p>
 </body>
 </html>
