--- a/hello.html
+++ b/hello.html
@@ -29,5 +29,8 @@
         me ru dikun ne lokacion ne kompujter e run ne nje new folder. tani shkon shkrun kod e run e prek ctrl+s pastaj te changes e prek plus qato ndyshime kalojne stage
         e shkru ni msg qfare do  ska lidhje e prek commit edhe e bon push. And yeah thats it ♥♥♥♥
     </p>
+     <p>
+       dom eshte shkurtes per document object  model
+     </p>
 </body>
 </html>
